--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,45 @@
+astroid==2.1.0
+Brotli==1.0.7
+certifi==2019.3.9
+chardet==3.0.4
+colorama==0.4.1
+cycler==0.10.0
+cymysql==0.9.13
+defusedxml==0.6.0
+dj-database-url==0.5.0
 Django==2.2.1
-pytz==2019.1
-sqlparse==0.3.0
-
+django-allauth==0.36.0
+django-cors-headers==2.2.0
+django-cymysql==2.1.0
+django-heroku==0.3.1
+django-mysql==2.4.1
+django-rest-auth==0.9.3
 djangorestframework==3.9.3
+gunicorn==19.9.0
+idna==2.8
+isort==4.3.4
+kiwisolver==1.0.1
+lazy-object-proxy==1.3.1
+matplotlib==3.0.2
+mccabe==0.6.1
+mysqlclient==1.4.2.post1
+numpy==1.16.0rc2+mkl
+oauthlib==3.0.1
+opencv-python==4.0.1
 Pillow==5.3.0
 psycopg2==2.7.6.1
 psycopg2-binary==2.7.6.1
-
-django-allauth==0.36.0
-django-rest-auth==0.9.3
-django-cors-headers==2.2.0
+pylint==2.2.2
+PyMySQL==0.9.3
+pyparsing==2.3.1
+python-dateutil==2.7.5
+python3-openid==3.1.0
+pytz==2019.1
+requests==2.22.0
+requests-oauthlib==1.2.0
+scipy==1.2.1
+six==1.12.0
+sqlparse==0.3.0
+urllib3==1.25.2
+whitenoise==4.1.2
+wrapt==1.11.1
