--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ lazy-object-proxy==1.3.1
 matplotlib==3.0.2
 mccabe==0.6.1
 mysqlclient==1.4.2.post1
-numpy==1.16.0rc2+mkl
+numpy==1.16.0
 oauthlib==3.0.1
 opencv-python==4.0.1
 Pillow==5.3.0
